# fastsafetensor_3fs_reader

./: .gitignore  MANIFEST.in  Makefile  README.md  pyproject.toml  setup.py
.github/workflows/: build-3fs.yaml  build-wheel.yaml  lint.yaml  test.yaml
fastsafetensor_3fs_reader/: __init__.py  _backend.py  _cuda_utils.py  _lib_preload.py  _mount_utils.py  interface.py  mock.py  reader.py  reader_cpp.py  reader_py.py
fastsafetensor_3fs_reader/cpp/: usrbio_reader.cpp  usrbio_reader_v2.cpp
fastsafetensor_3fs_reader/cpp/include/: hf3fs_usrbio.h
hack/: analyze_queue_timeline.py  benchmark_nccl_broadcast.py  test_queue_performance.py  test_usrbio_common.py  test_usrbio_network_limit.py  test_usrbio_simple.py
hack/analysis/: __init__.py  analyze_queue_timeline.py  benchmark_nccl_broadcast.py  diagnose_gpu_contention.py  test_queue_performance.py
hack/benchmark/: CHART_GENERATION_GUIDE.md  __init__.py  benchmark_report.py  benchmark_runner.py  benchmark_worker.py  generate_charts_from_csv.py
hack/test/: __init__.py  quick_test.sh  test_usrbio_common.py  test_usrbio_network_limit.py  test_usrbio_simple.py
tests/: conftest.py  test_lib_preload.py  test_mock.py  test_threefs.py  测试用例梳理.md
