[project]
name = "fastsafetensor-3fs-reader"
version = "0.1.0"
description = "3FS USRBIO file reader for fastsafetensors"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">= 3.9"
keywords = ["3fs", "usrbio", "safetensors", "gpu", "io"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.optional-dependencies]
test = [
    "pytest>=8.1.1",
]

[project.urls]
Repository = "https://github.com/your-org/fastsafetensor_3fs_reader"

[build-system]
requires = ["setuptools>=69.5.1", "wheel", "pybind11"]
build-backend = "setuptools.build_meta"
