[project]
name = "fastsafetensor-3fs-reader"
version = "0.3.0"
description = "3FS USRBIO file reader for fastsafetensors"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">= 3.9"
keywords = ["3fs", "usrbio", "safetensors", "gpu", "io"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.optional-dependencies]
test = [
    "pytest>=8.1.1",
    "numpy",
]
# GPU memory transfer via PyTorch
gpu = [
    "torch>=2.0",
]
# Code quality tools
lint = [
    "ruff>=0.6.0",
]
# NOTE: hf3fs-py-usrbio must be built from the DeepSeek 3FS source tree.
# It is NOT available on PyPI.  See README.md for installation instructions.

[project.urls]
Repository = "https://github.com/ABNER-1/fastsafetensor_3fs_reader"

[build-system]
requires = ["setuptools>=69.5.1", "wheel", "pybind11"]
build-backend = "setuptools.build_meta"

# ---------------------------------------------------------------------------
# Ruff configuration
# ---------------------------------------------------------------------------

[tool.ruff]
target-version = "py39"
line-length = 100
src = ["fastsafetensor_3fs_reader", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # Pyflakes
    "W",   # pycodestyle warnings
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in default arguments
    "B904",  # raise from within except (too strict for this codebase)
]

[tool.ruff.lint.isort]
known-first-party = ["fastsafetensor_3fs_reader"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
